force-app/main/default/objects/Twilio__c/Twilio__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Store the Twilio authentication details for better use.</description>
    <label>Twilio Configuration</label>
</CustomObject>