force-app/main/default/objects/Twilio__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Holding the Twilio purchage number for sending notifications to the customers.</description>
    <label>Phone Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>