force-app/main/default/objects/Twilio__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Holding the twilio tocken</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>