force-app/main/default/objects/Twilio__c/fields/TwilioURL__c.field-meta.xml
<CustomField>
    <fullName>TwilioURL__c</fullName>
    <description>holding the twilio URL</description>
    <label>TwilioURL</label>
    <type>Url</type>
</CustomField>