force-app/main/default/objects/Twilio__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>holding the Twilio version for the REST API</description>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>